crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/tests/snapshots/utterance_parsing_tests__error_empty_speaker.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/utterance.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: TreeParsingError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "*:\thello .",
                        span: Span {
                            start: 0,
                            end: 10,
                        },
                        expected: [],
                        found: "*:\thello .",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Expected source_file root",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E330",
                ),
            },
        ],
    },
)
